--- a/jb/minecraft.plist
+++ b/jb/minecraft.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://github.com/vkhiep/vkhiep.github.io/releases/download/ipa/minecraft.ipa</string>
+					<string>https://github.com/vkhiep/vkhiep.github.io/releases/download/ipa/Minecraft_1.19.73_LeTi.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
