--- a/jb/bendy.plist
+++ b/jb/bendy.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://github.com/vkhiep/vkhiep.github.io/releases/download/ipa/BendyandtheInkMachine_1.1.3_LeTi.ipa</string>
+					<string>https://github.com/vkhiep/vkhiep.github.io/releases/download/ipa/BendyandtheInkMachine_1.1.3.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
