--- a/jb/diutube.plist
+++ b/jb/diutube.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://github.com/vkhiep/vkhiep.github.io/releases/download/ipa/DiuTube_17.40.5_LeTi.ipa</string>
+					<string>https://github.com/vkhiep/vkhiep.github.io/releases/download/ipa/DiuTube_17.40.5.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
