--- a/jb/pocketcity2.plist
+++ b/jb/pocketcity2.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://github.com/vkhiep/vkhiep.github.io/releases/download/ipa/Pocket.City.2_1.002_user_hidden.bfi2.ipa</string>
+					<string>https://github.com/vkhiep/vkhiep.github.io/releases/download/ipa/Pocket_City_2.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
